Documentation edits made through Mintlify web editor

--- a/a-getting-started/start-guide.mdx
+++ b/a-getting-started/start-guide.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Start guide"
-description: "Navigating your workspace, tables, and dashboards"
+description: " "
 ---
 
 > TL;DR\
 > Epsilo is built around tables. Use the left-side navigation bar to locate tables, which display real-time data that you can customize by adjusting time ranges, metrics, and filters.\
 > Your dashboard views can be saved and shared with team members.
 
-## Navigating your workspace
+### Navigating your workspace
 
 On the left side of your screen, you'll find the **main navigation bar**, which serves as your starting point.
 
