--- a/a-getting-started/quick-start-new-admin.mdx
+++ b/a-getting-started/quick-start-new-admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Quick start for new admin"
+title: "Quick start for admin"
 ---
 
 This guide helps you understand the workspace layout and where to find key modules for automation, reporting, and insights.
