Documentation edits made through Mintlify web editor

--- a/b-workspace/billing-and-plans.mdx
+++ b/b-workspace/billing-and-plans.mdx
@@ -3,7 +3,7 @@ title: "Billing and plans"
 description: "Learn about Epsilo’s subscription plans, billing cycles, and how to manage payments in your workspace."
 ---
 
-Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks.\
+Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks.
 This guide explains how billing works, who can access invoices, and how to upgrade or manage your subscription.
 
 ---
