Documentation edits made through Mintlify web editor

--- a/b-workspace/billing-and-plans.mdx
+++ b/b-workspace/billing-and-plans.mdx
@@ -3,8 +3,7 @@ title: "Billing and plans"
 description: "Learn about Epsilo’s subscription plans, billing cycles, and how to manage payments in your workspace."
 ---
 
-Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks.
-This guide explains how billing works, who can access invoices, and how to upgrade or manage your subscription.
+Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks. This guide explains how billing works, who can access invoices, and how to upgrade or manage your subscription.
 
 ---
 
@@ -75,14 +74,7 @@ Plan changes take effect immediately, and any prorated charges are applied to th
 Only **Owners** can manage billing and view invoices.\
 Admins can view plan details but cannot modify payments.
 
-| Action                | Owner | Admin | Member | Viewer |
-| --------------------- | :---: | :---: | :----: | :----: |
-| View plan details     | ✅     | ✅     | ❌      | ❌      |
-| Update payment method | ✅     | ❌     | ❌      | ❌      |
-| Download invoices     | ✅     | ✅     | ❌      | ❌      |
-| Change plan           | ✅     | ❌     | ❌      | ❌      |
-
-> 🔒 Epsilo never stores raw credit card information. All payments are processed securely via Stripe or enterprise invoicing.
+🔒 Epsilo never stores raw credit card information. All payments are processed securely via Stripe or enterprise invoicing.
 
 ---
 
