Documentation edits made through Mintlify web editor

--- a/a-getting-started/start-guide.mdx
+++ b/a-getting-started/start-guide.mdx
@@ -1,10 +1,9 @@
 ---
 title: "Start guide"
----
+description: "This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work.
 
-> TL;DR\
-> Epsilo is built around tables. Use the left-side navigation bar to locate tables, which display real-time data that you can customize by adjusting time ranges, metrics, and filters.\
-> Your dashboard views can be saved and shared with team members.
+Let’s get started!"
+---
 
 ### Navigating your workspace
 
@@ -14,8 +13,6 @@ On the left side of your screen, you'll find the **main navigation bar**, which 
 
 At the very top, you’ll see your workspace name. One click lets you switch between different workspaces that you have access to.
 
-![Workspacename Pn](/images/workspacename.png)
-
 ### Workflows
 
 Right below your workspace name, you’ll be able to see workflows that you’ve saved.\
@@ -24,20 +21,14 @@ These act like folders for holding specific views and tables used in your daily 
 - **Private workflows:** Only visible to you.
 - **Shared workflows:** Visible and usable by every user in your workspace.
 
-![Workflowssectionui Pn](/images/workflowssectionui.png)
-
 ### Products
 
 Below the workflows are the products you’re subscribed to.\
 Each product houses a number of sections, and each section is made up of tables.
 
-![Productsecttion Pn](/images/productsecttion.png)
-
 ### Bottom bar
 
 At the bottom of the navigation bar, you’ll find a **question mark icon** for quick access to menu items:
-
-![Bottombarui Pn](/images/bottombarui.png)
 
 - **Get support:** Reach out to our support team for requests, issues, or tracking past tickets.
 - **Submit a feature request:** Have a feature idea? Share it with our product team directly.
@@ -46,13 +37,9 @@ At the bottom of the navigation bar, you’ll find a **question mark icon** for 
 
 Tables are the heart and soul of Epsilo — powerful mini-dashboards within each section.
 
-![Tableoverviewimage(3) Pn](/images/tableoverviewimage\(3\).png)
-
 ### Configurations
 
 This is where you set up the parameters of the table.
-
-![Configuipt2 Pn](/images/configuipt2.png)
 
 - **Time period:** Adjust the time range of the data.\
   Pick a date, a range, or a relative period (e.g., _last 15 days_).\
@@ -68,8 +55,6 @@ This is where you set up the parameters of the table.
 
 Click the rightmost **kebab menu (⋮)** to select which properties (metrics) appear as columns or cards.
 
-![Propertiesui Pn](/images/propertiesui.png)
-
 - **Dimensions:** Stable identifiers (e.g., _Storefront name_, _SKU name_, _Company_).
 - **Attributes:** Current statuses unaffected by time filters (e.g., _Campaign status_, _% budget today_, _Stock_).
 - **Metrics:** Calculated or performance values (e.g., _Ads spend_, _CPC_, _ROAS_, _Ads items sold_).
@@ -78,8 +63,6 @@ Click the rightmost **kebab menu (⋮)** to select which properties (metrics) ap
 
 This is where the results of your setup appear — the data itself.\
 There are several ways to interact with your table:
-
-![Datasectionui(1) Pn](/images/datasectionui\(1\).png)
 
 - **Group by:** Combine items in one column (like pivot tables in a spreadsheet).\
   For example, tag some SKUs as “Focus SKUs” and collapse them together.\
@@ -97,20 +80,14 @@ Create as many views as needed and switch between them easily.
 
 Click the kebab menu to rename or describe your view for quick recognition later.
 
-![Newviewgifcanva Gi](/images/newviewgifcanva.gif)
-
 ### Duplicate your views for experiments
 
 If you want to test new filters or metrics without altering your original setup, simply **duplicate** the view.
-
-![Duplicateviewgifcanva Gi](/images/duplicateviewgifcanva.gif)
 
 ### Explore views from others in your workspace
 
 Browse views created by teammates.\
 If you find one you want, click its kebab menu and select **Clone view** to add it to your own list.
-
-![Cloneviewgifcanva Gi](/images/cloneviewgifcanva.gif)
 
 ---
 
