--- a/a-getting-started/start-guide.mdx
+++ b/a-getting-started/start-guide.mdx
@@ -1,8 +1,7 @@
 ---
 title: "Start guide"
-description: "This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work.
-
-Let’s get started!"
+description: "
+This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work. Let’s get started!"
 ---
 
 ### Navigating your workspace
