--- a/a-getting-started/start-guide.mdx
+++ b/a-getting-started/start-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Start guide"
-description: This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work.
+description: "This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work."
 
 Let’s get started!
 ---
