--- a/a-getting-started/quick-start-new-admin.mdx
+++ b/a-getting-started/quick-start-new-admin.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Quick start for admin"
+description: "This guide helps you understand the workspace layout and where to find key modules for automation, reporting, and insights."
 ---
-This guide helps you understand the workspace layout and where to find key modules for automation, reporting, and insights.
 
 ## Overview
 
