Documentation edits made through Mintlify web editor

--- a/a-getting-started/start-guide.mdx
+++ b/a-getting-started/start-guide.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Start guide"
-description: "This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work.
-Let’s get started!"
+description: "This guide will walk you through the key features of Epsilo and help you get set up quickly, so you can focus on what matters most: delivering impactful work. Let’s get started!"
 ---
+
+## Overview
 
 ### Navigating your workspace
 
@@ -87,8 +88,6 @@ If you want to test new filters or metrics without altering your original setup,
 
 Browse views created by teammates.\
 If you find one you want, click its kebab menu and select **Clone view** to add it to your own list.
-
----
 
 ## Details
 
