--- a/i-playbooks/ad-spend-optimization.mdx
+++ b/i-playbooks/ad-spend-optimization.mdx
@@ -2,17 +2,11 @@
 title: "Ad spend optimization"
 description: "A guide to optimizing ad spend through SKU management, bid adjustment, and campaign grouping for higher ROAS and GMV efficiency."
 ---
-
-
-<Note>
-  TDLR
-
+## Overview
   To maximize returns from your ad spend, focus on three key principles:
-
   1. **Eliminate waste early** by pausing low-performing SKUs.
   2. **Reallocate budgets** to SKUs that deliver consistent GMV and ROAS.
   3. **Compete smartly** for top ad positions with the right bidding strategy.
-</Note>
 
 ## 1. Cut Wasted Spend Early
 
