--- a/i-playbooks/hyper-automation-scripts.mdx
+++ b/i-playbooks/hyper-automation-scripts.mdx
@@ -3,12 +3,9 @@ title: "Hyper Automation Scripts: Most Common Use Cases"
 description: "Practical Hyper Automation script templates, grouped by objectives and business questions."
 ---
 
+## Overview
 
-<Note>
-  **TLDR**
-
-  Pick a script based on your objective (e.g., maximize impressions, control bids, reduce waste). For best results, always use **paired scripts** — an “increase” script with a matching “decrease” script — so performance stays balanced.
-</Note>
+Pick a script based on your objective (e.g., maximize impressions, control bids, reduce waste). For best results, always use paired scripts — an “increase” script with a matching “decrease” script — so performance stays balanced.
 
 ## Missing Opportunities
 
