--- a/i-playbooks/thinking-in-campaigns.mdx
+++ b/i-playbooks/thinking-in-campaigns.mdx
@@ -3,13 +3,11 @@ title: "Thinking in Campaigns: Strategies for Grouping and Organizing Ad Objects
 description: "A guide to organizing SKUs into ad campaigns – covering grouping principles, segmentation models, and maintenance practices."
 ---
 
-<Note>
-  TLDR
+## Overview
 
-  Group SKUs that share targeting, budgeting, and scheduling needs.\
-  Only combine SKUs with matching ROAS targets and campaign timing.\
-  Begin with basic groupings (`Priority/Non-Priority`, `Proven/New`, `Short-Tail/Long-Tail`) and add complexity only when it directly affects bidding or budget decisions.
-</Note>
+Group SKUs that share targeting, budgeting, and scheduling needs.\
+Only combine SKUs with matching ROAS targets and campaign timing.\
+Begin with basic groupings (`Priority/Non-Priority`, `Proven/New`, `Short-Tail/Long-Tail`) and add complexity only when it directly affects bidding or budget decisions.
 
 ## Why Grouping Matters
 
