Documentation edits made through Mintlify web editor

--- a/i-playbooks/hyper-automation-scripts.mdx
+++ b/i-playbooks/hyper-automation-scripts.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Hyper Automation Scripts: Most Common Use Cases"
-description: "Practical Hyper Automation script templates, grouped by objectives and business questions."
+title: "Hyper Automation Scripts"
+description: "Most Common Use Cases: Practical Hyper Automation script templates, grouped by objectives and business questions."
 ---
 
 ## Overview
