Documentation edits made through Mintlify web editor

--- a/i-playbooks/thinking-in-campaigns.mdx
+++ b/i-playbooks/thinking-in-campaigns.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Thinking in Campaigns"
-description: "Strategies for Grouping and Organizing Ad Objects (SKUs) into Campaigns  
-A guide to organizing SKUs into ad campaigns – covering grouping principles, segmentation models, and maintenance practices."
+description: "A guide to organizing SKUs into ad campaigns – covering grouping principles, segmentation models, and maintenance practices."
 ---
 
 ## Overview
