Documentation edits made through Mintlify web editor

--- a/a-getting-started/quick-start-new-admin.mdx
+++ b/a-getting-started/quick-start-new-admin.mdx
@@ -11,11 +11,9 @@ The interface is divided into three key areas:
 
 1. **Sidebar** — Navigate between products and tools.
 2. **Main dashboard** — View campaign metrics and activity.
-3. **Top bar** — Access filters, search, and workspace settings.
+3. **Top bar** — Access filters, search, and workspace settings
 
-![Epsilo workspace layout](../images/navigation-layout.png)
-
----
+   ![Workspacename Pn](/w-images/workspacename.png)
 
 ## Sidebar
 
