Documentation edits made through Mintlify web editor

--- a/a-getting-started/quick-start-new-admin.mdx
+++ b/a-getting-started/quick-start-new-admin.mdx
@@ -13,6 +13,8 @@ The interface is divided into three key areas:
 2. **Main dashboard** — View campaign metrics and activity.
 3. **Top bar** — Access filters, search, and workspace settings
 
+   ![Filter5 Pn](/w-images/filter5.png)
+
    ![Workspacename Pn](/w-images/workspacename.png)
 
 ## Sidebar
